Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7829

Glimpse lock shouldn't match not granted locks

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • 3
    • 9223372036854775807

      A deadlock is possible during ccc_prep_size()->ldlm_lock_match() vs
      cl_io_lock() which is waiting for a matched lock and conflicts with
      already taken lock before ccc_prep_size().

      It is better to send an aditional lock request to avoid deadlock.

            wc-triage WC Triage
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: