LU-7829 osc: glimpse lock should match only with granted locks

A deadlock is possible during ccc_prep_size()->ldlm_lock_match() vs
cl_io_lock() which is waiting for a matched lock and conflicts with
already taken lock before ccc_prep_size().

It is better to send an aditional lock request to avoid deadlock.

Seagate-bug-id: MRP-3312
Change-Id: I2eed05da4d587500cfc14350d9cc1b33547df4fe
Signed-off-by: Andriy Skulysh <andriy.skulysh@seagate.com>

This is a port to Cray-b2_7_fe from:

http://review.whamcloud.com/#/c/18738
patch set 1

Bugs Affected: 835240
Bug Action: UPDATE